added bootstrap container-fluid class

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+ 
 <section id="first-section" >
+  <div class="container-fluid">
     <nav class="navbar navbar-expand-lg navbar-dark " >
 
       <a class="navbar-brand text-warning" href="#"><span class="title">My Portfolio</span></a>
@@ -40,21 +42,25 @@
     </nav>
 
     <div class="row">
-      <div class="col-md-6 col-sm-12" style="color:white;">
-        <h1>I'm Michael</h1>
+      <div class="col-md-6 description" style="color:white;">
+        <h1>I'm Israel</h1>
         <p>Freelance Web & Mobile UI/UX Designer</p>
-        <button>Hire Me</button>
+        <button type="button" class="btn btn-outline-warning btn-lg">Hire Me</button>
       </div>
-      <div class="col-md-6 col-sm-12" style=" color:white;">
-       <img src="profile.jpg" alt="profile-photo" >
+
+      <div class="col-md-6">
+       <img src="profile.jpg" alt="profile-photo" class="profile-pic" >
       </div>
+
+    </div> 
+    
+    </div>
 </section>
 
 <section >
 
 
    
-  </div>
 
  
 <hr>
