added about section

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>My-Portfolio</title>
   <link rel="stylesheet" href="Boostrap V4/css/bootstrap.css">
   <link rel="stylesheet" href="style.css">
 </head>
@@ -24,7 +24,7 @@
 
         <ul class="navbar-nav ml-auto ">
           <li class="nav-item">
-            <a class="nav-link text-warning" href="#">About</a>
+            <a class="nav-link text-warning" href="#about">About</a>
           </li>
           <li class="nav-item">
             <a class="nav-link text-warning" href="#">Resume</a>
@@ -57,16 +57,31 @@
     </div>
 </section>
 
-<section >
+<section id="second-section" style="background-color:#141414;" >
 
+  <div class="container-fluid">
+ <div class="row">
+   <div class="col-md-6 about">
+     <h1> <a name="about"></a> <span>About Me</span> </h1>
 
-   
+   </div>
 
- 
-<hr>
+   <div class="col-md-6 about-me">
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam autem eum dolores minima qui a aspernatur illum, 
+      velit tempore inventore eligendi corporis alias. Vero beatae ipsa esse, quod laudantium rem?</p>
+      
+      <p>orem ipsum dolor sit amet consectetur adipisicing elit. Nam autem eum dolores minima qui a aspernatur illum, 
+        velit tempore inventore eligendi corporis alias. Vero beatae ipsa esse, quod laudantium rem?</p>
+
+        <button type="button" class="btn btn-outline-warning btn-lg">My Skills</button>
+  </div>
+
+ </div>
+</div>
+
 </section>
 
-
+ 
 <!-- <div class="card bg-dark text-light"  style="width: 18rem;">
   <img src="profile.jpg" class="card-img-top" alt="...">
   <div class="card-body">
@@ -75,7 +90,7 @@
     <a href="#" class="btn btn-primary">Go somewhere</a>
   </div>
 </div> -->
-
+ 
 
 
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
