added media query

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My-Portfolio</title>
+  <link href="https://fonts.googleapis.com/css2?family=Work+Sans&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="Boostrap V4/css/bootstrap.css">
   <link rel="stylesheet" href="style.css">
 </head>
@@ -42,7 +43,7 @@
     </nav>
 
     <div class="row">
-      <div class="col-md-6 description" style="color:white;">
+      <div class="col-md-6 description" style="color:#cccccc;">
         <h1>I'm Israel</h1>
         <p>Freelance Web & Mobile UI/UX Designer</p>
         <button type="button" class="btn btn-outline-warning btn-lg">Hire Me</button>
@@ -73,7 +74,7 @@
       <p>orem ipsum dolor sit amet consectetur adipisicing elit. Nam autem eum dolores minima qui a aspernatur illum, 
         velit tempore inventore eligendi corporis alias. Vero beatae ipsa esse, quod laudantium rem?</p>
 
-        <button type="button" class="btn btn-outline-warning btn-lg">My Skills</button>
+        <button type="button" class="btn btn-mobile btn-outline-warning btn-lg">My Skills</button>
   </div>
 
  </div>
