styled button in about section

--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
     </nav>
 
     <div class="row">
-      <div class="col-md-6 description" style="color:#cccccc;">
+      <div class="col-md-6 description" >
         <h1>I'm Israel</h1>
-        <p>Freelance Web & Mobile UI/UX Designer</p>
+        <p>Front-end Web Developer & Mobile UI/UX Designer</p>
         <button type="button" class="btn btn-outline-warning btn-lg">Hire Me</button>
       </div>
 
@@ -74,7 +74,7 @@
       <p>orem ipsum dolor sit amet consectetur adipisicing elit. Nam autem eum dolores minima qui a aspernatur illum, 
         velit tempore inventore eligendi corporis alias. Vero beatae ipsa esse, quod laudantium rem?</p>
 
-        <button type="button" class="btn btn-mobile btn-outline-warning btn-lg">My Skills</button>
+        <button type="button" class="btn btn-outline-warning btn-lg">My Skills</button>
   </div>
 
  </div>
