--- a/index.html
+++ b/index.html
@@ -85,18 +85,18 @@
 
  <section id="skills-section" style="background-color: black; ">
 
-   <div class="container-fluid text-center">
+   <div class="container-fluid ">
 
-    <h1 class="skills-h1" style="color: white;">My Skills</h1>
+    <h1 class="skills-h1" > <span>My Skills</span> </h1>
 
-     <div class="row">
+     <div class="row ">
 
 
        <div class="skills col-md-6" >
 
           <img src="cyber.webp" alt="" class="image-skills" >
 
-            <div class="content1" >
+            <div class="content1 " >
               <i class="fa fa-mobile" aria-hidden="true"></i>
               <h1>My Cyber</h1>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea facere aliquam sapiente non voluptatum id labore 
