added another section and reduced font-size of H1 in skills section

--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
 
 
 <!-- Beginning of third section -->
+
  <section id="skills-section" style="background-color: black; ">
 
    <div class="container-fluid ">
@@ -177,6 +178,19 @@
    </div>
 
  </section>
+
+ <!-- End of third of section -->
+
+ <!-- Beginning of Fourth Section -->
+ <div class="container-fluid">
+   <div class="row">
+     <div class="col-lg-12">
+
+     </div>
+
+   </div>
+
+ </div>
 <!-- <div class="card bg-dark text-light"  style="width: 18rem;">
   <img src="profile.jpg" class="card-img-top" alt="...">
   <div class="card-body">
