added bootstrap container-fluid and some test projects

--- a/index.html
+++ b/index.html
@@ -182,15 +182,36 @@
  <!-- End of third of section -->
 
  <!-- Beginning of Fourth Section -->
- <div class="container-fluid">
-   <div class="row">
-     <div class="col-lg-12">
-
+ <section id="Projects-section" style="background-color:#1B1A17;">
+  <div class="container-fluid ">
+    <h1 class="skills-h1" > <a name="skills" ><span>Projects</span> </a> </h1>
+  
+     <div class="row">
+       <div class="col-lg-3 col-md-4 col-sm-12">
+         <img src="about.jpg" alt="" width="400" height="200">
+  
+       </div>
+       <div class="col-lg-3 col-md-4 col-sm-12">
+        <img src="about.jpg" alt="" width="400" height="200">
+ 
+      </div>
+ 
+      <div class="col-lg-3 col-md-4 col-sm-12">
+        <img src="about.jpg" alt="" width="400" height="200">
+ 
+      </div>
+ 
+      <div class="col-lg-3 col-md-4 col-sm-12">
+        <img src="about.jpg" alt="" width="400" height="200">
+ 
+      </div>
+ 
+  
      </div>
-
+  
    </div>
-
- </div>
+ </section>
+ 
 <!-- <div class="card bg-dark text-light"  style="width: 18rem;">
   <img src="profile.jpg" class="card-img-top" alt="...">
   <div class="card-body">
