--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <section id="first-section" >
   <div class="container-fluid">
-    <nav class="navbar navbar-expand-lg navbar-dark " >
+    <nav class="navbar sticky-top navbar-expand-lg navbar-dark " >
 
       <a class="navbar-brand text-warning" href="#"><span class="title">My Portfolio</span></a>
 
@@ -187,24 +187,20 @@
     <h1 class="skills-h1" > <a name="skills" ><span>Projects</span> </a> </h1>
   
      <div class="row">
-       <div class="col-lg-3 col-md-4 col-sm-12">
-         <img src="about.jpg" alt="" width="400" height="200">
+       <div class=" project-works col-lg-4 ">
+        <img src="about.jpg" alt="" style="width: inherit;" height="200">
   
        </div>
-       <div class="col-lg-3 col-md-4 col-sm-12">
-        <img src="about.jpg" alt="" width="400" height="200">
+      
+      <div class=" project-works col-lg-4  ">
+        <img src="about.jpg" alt="" style="width: inherit;" height="200">
  
       </div>
- 
-      <div class="col-lg-3 col-md-4 col-sm-12">
-        <img src="about.jpg" alt="" width="400" height="200">
- 
-      </div>
- 
-      <div class="col-lg-3 col-md-4 col-sm-12">
-        <img src="about.jpg" alt="" width="400" height="200">
+      <div class=" project-works col-lg-4  ">
+        <img src="about.jpg" alt="" style="width: inherit;" height="200">
  
       </div>
+      
  
   
      </div>
