--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <section id="first-section" >
   <div class="container-fluid">
-    <nav class="navbar sticky-top navbar-expand-lg navbar-dark " >
+    <nav class="navbar navbar-expand-lg navbar-dark " >
 
       <a class="navbar-brand text-warning" href="#"><span class="title">My Portfolio</span></a>
 
@@ -188,16 +188,16 @@
   
      <div class="row">
        <div class=" project-works col-lg-4 ">
-        <img src="about.jpg" alt="" style="width: inherit;" height="200">
+        <img src="about.jpg" alt="" >
   
        </div>
       
       <div class=" project-works col-lg-4  ">
-        <img src="about.jpg" alt="" style="width: inherit;" height="200">
+        <img src="about.jpg" alt="" >
  
       </div>
       <div class=" project-works col-lg-4  ">
-        <img src="about.jpg" alt="" style="width: inherit;" height="200">
+        <img src="about.jpg" alt="" >
  
       </div>
       
