added scroll behaviour smooth to navigation

--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
             <a class="nav-link text-warning" href="#about">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-warning" href="#">Resume</a>
+            <a class="nav-link text-warning" href="#resume">Resume</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-warning" href="#">Contact</a>
+            <a class="nav-link text-warning" href="#contact">Contact</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-warning" href="#"> Skills</a>
+            <a class="nav-link text-warning" href="#skills"> Skills</a>
           </li>
           </ul>
 
@@ -73,8 +73,8 @@
 
   <div class="container-fluid">
  <div class="row">
-   <div class="col-md-6 about">
-     <h1> <a name="about"></a> <span>About Me</span> </h1>
+   <div class="col-md-6 about" id="about">
+     <h1> <a ></a> <span>About Me</span> </h1>
 
    </div>
 
@@ -184,7 +184,7 @@
  <!-- Beginning of Fourth Section -->
  <section id="Projects-section" style="background-color:#1B1A17;">
   <div class="container-fluid ">
-    <h1 class="skills-h1" > <a name="skills" ><span>Projects</span> </a> </h1>
+    <h1 class="skills-h1" > <a name="projects" ><span>Projects</span> </a> </h1>
   
      <div class="row">
        <div class=" project-works col-lg-4 ">
