--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
             <a class="nav-link text-warning" href="#resume">Resume</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-warning" href="#contact">Contact</a>
+            <a class="nav-link text-warning" href="#skills">Skills</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-warning" href="#skills"> Skills</a>
+            <a class="nav-link text-warning" href="#contact"> Contact</a>
           </li>
           </ul>
 
@@ -49,8 +49,12 @@
 
     <div class="row">
       <div class="col-md-6 description" >
-        <h1>I'm Israel</h1>
+        <h1>Hi, I'm Israel</h1>
         <p>Front-end Web Developer & UI/UX Designer</p>
+        <a class="social-contact" href="https://web.facebook.com/israel.effiongrobert" title="facebook"><i class="fa-brands fa-facebook"></i></a>
+        <a class="social-contact" href="https://www.linkedin.com/in/israel-robert/" title="linkedin"><i class="fa-brands fa-linkedin"></i></a>
+        <a class="social-contact" href="https://github.com/trend87" title="github"><i class="fa-brands fa-github"></i></a>
+        <br>
         <button type="button" class="btn btn-outline-warning btn-lg">Hire Me</button>
       </div>
 
