created contact section

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 
- <!-- Beginning of first section -->
+ <!-- Beginning of welcome section -->
 
 <section id="first-section" >
   <div class="container-fluid">
@@ -68,10 +68,10 @@
     </div>
 </section>
 
-<!-- End of first section -->
+<!-- End of welcome section -->
 
 
-<!-- Beginning of second section -->
+<!-- Beginning of About section -->
 <section id="second-section" style="background-color:#1B1A17;" >
 
 
@@ -97,10 +97,10 @@
 
 </section>
 
-<!-- End of Second section -->
+<!-- End of About section -->
 
 
-<!-- Beginning of third section -->
+<!-- Beginning of Skills section -->
 
  <section id="skills-section" style="background-color: black; ">
 
@@ -183,7 +183,7 @@
 
  </section>
 
- <!-- End of third of section -->
+ <!-- End of skills section -->
 
  <!-- Beginning of Fourth Section -->
  <section id="Projects-section" style="background-color:#1B1A17;">
@@ -212,14 +212,26 @@
    </div>
  </section>
  
-<!-- <div class="card bg-dark text-light"  style="width: 18rem;">
-  <img src="profile.jpg" class="card-img-top" alt="...">
-  <div class="card-body">
-    <h5 class="card-title">Card title</h5>
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-    <a href="#" class="btn btn-primary">Go somewhere</a>
+ <!-- Beginning of Contact section -->
+ <section id="contact-section" style="background-color:black ;">
+  <div class="container">
+    <form action="action_page.php">
+  
+      <label for="fname">First Name</label>
+      <input type="text" id="fname" name="firstname" placeholder="Your name..">
+  
+      <label for="lname">Last Name</label>
+      <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+  
+      <label for="subject">Subject</label>
+      <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
+  
+      <input type="submit" value="Submit">
+  
+    </form>
   </div>
-</div> -->
+ </section>
+
  
 <!-- <marquee behavior="scroll" direction="left">HTML scrolling text... </marquee> -->
 
