added text typing animation on welcome section

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Work+Sans&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="Boostrap V4/css/bootstrap.css">
   <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
 
@@ -50,7 +51,7 @@
     <div class="row">
       <div class="col-md-6 description" >
         <h1>Hi, I'm Israel</h1>
-        <p>Front-end Web Developer & UI/UX Designer</p>
+        <p><span class="auto-type"></span></p>
         <a class="social-contact" href="https://web.facebook.com/israel.effiongrobert" title="facebook"><i class="fa-brands fa-facebook"></i></a>
         <a class="social-contact" href="https://www.linkedin.com/in/israel-robert/" title="linkedin"><i class="fa-brands fa-linkedin"></i></a>
         <a class="social-contact" href="https://github.com/trend87" title="github"><i class="fa-brands fa-github"></i></a>
@@ -234,6 +235,17 @@
 
  
 <!-- <marquee behavior="scroll" direction="left">HTML scrolling text... </marquee> -->
+  <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
+
+  <script>
+    var typed = new Typed(".auto-type", {
+      strings: ["Frontend Developer", "UX Designer", "WordPress Developer", "Graphics Designer"],
+      typeSpeed: 100,
+      backSpeed: 100,
+      loop: true
+    })
+
+  </script>
 
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
