added vanilla tilt js to my skills section

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
-        <ul class="navbar-nav ml-auto ">
+        <ul class="navbar-nav ml-auto">
           <li class="nav-item">
             <a class="nav-link text-warning" href="#about">About</a>
           </li>
@@ -105,14 +105,14 @@
 
  <section id="skills-section" style="background-color: black; ">
 
-   <div class="container-fluid ">
+   <div class="container-fluid " >
 
     <h1 class="skills-h1" > <a name="skills" ><span>My Skills</span> </a> </h1>
 
      <div class="row ">
 
 
-       <div class="skills col-md-6" >
+       <div class="skills col-md-6" data-tilt>
 
           <img src="cyber.webp" alt="" class="image-skills" >
 
@@ -126,7 +126,7 @@
 
         </div>
 
-       <div class="skills col-md-6">
+       <div class="skills col-md-6" data-tilt>
 
         <img src="graphics-design.webp" class="image-skills" alt="">
 
@@ -141,7 +141,7 @@
   
       </div>
 
-       <div class="skills col-md-6" >
+       <div class="skills col-md-6" data-tilt>
        
           <img src="ui-ux.webp" class="image-skills" alt="">
          
@@ -160,7 +160,7 @@
 
        </div>
 
-        <div class=" skills col-md-6" >
+        <div class=" skills col-md-6" data-tilt >
 
             <img src="web-development.webp" class="image-skills" alt="">
 
@@ -236,6 +236,7 @@
  
 <!-- <marquee behavior="scroll" direction="left">HTML scrolling text... </marquee> -->
   <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
+ 
 
   <script>
     var typed = new Typed(".auto-type", {
@@ -246,7 +247,7 @@
     })
 
   </script>
-
+  <script src="vanilla-tilt.js"></script>
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
